2004-03-06    <larus@LARUS1>

	* prevasive:
	Implemented MIPS32 instruction set.
	Eliminated coprocessor 3.
	Made coprocessor 2 operations raise coprocessor unimplemented trap
	(CpU).
	Eliminated l.s, l.d, s.s, s.d pseudo ops in favor of LWC1, LDC1,
	SWC1, SDC1.
	Modified exceptions and interrupts to conform to MIPS32 (ex when
	compiled -DMIPS1).
	Added CP0 timer.
	
2004-02-19    <larus@LARUS1>

	* inst.c inst.h spim-utils.c:
	Sorted instruction tables in advance, rather than on first use.

2004-02-16    <larus@LARUS1>

	* PCSpimView.cpp [Domenico G. Sorrenti (sorrenti@disco.unimib.it)]:
	Add prompt to ask user whether to reinitialize on reloading a file.

2004-02-15    <larus@LARUS1>

	* MainFrm.cpp MainFrm.h PCSpim.cpp PCSpimView.cpp PCSpimView.h
	[Matthew Low (mlow@imail.EECS.Berkeley.edu)]:
	Added menu item to set font in PCSpim.

	* Documentation/spim.tex [Deborah Ariel Pickett
	(debbiep@mail.csse.monash.edu.au)]:
	Updated documentation to reflect changes to command line options
	and new syscalls.	

	* pervasive:
	Eliminated #ifdef __STDC__. Everyone must have a non-K&R compiler
	by now.

	* mem.c [Akim Demaille (akim@epita.fr)]:
	Word align all segments, in particular, ensure that sbrk returns
	word-aligned addresses.

	* mips-syscall.c spim-syscall.h spim.c xspim.c spim.h
	SpimSupport.cpp [Akim Demaille (akim@epita.fr)]:
	Added new syscall (EXIT2_SYSCALL) that takes argument that is
	passed to spim's exit() call.
	
	* sym-tbl.c [Matt Harren (math@cs.berkeley.edu)]:
	Copied garbage byte after name of undefined symbols.

	* scanner.l [Vishal jain (vishalsj@yahoo.com)]:
	Old lex does not use yy_hold_char variable, so ifdef out reference.

	* spim.c [Matt Harren (math@cs.berkeley.edu)]:
	Handle boundary case for -file without name.

2004-02-14    <larus@LARUS1>

	* run.c [Bob Britton (BBritton@csuchico.edu)]:
	Correctly implement delayed load instructions. (Nobody ever use
	them before?)

	* parser.y:
	Record labels on line with syntax error.
